--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="title_activity_timeline">Home Timeline</string>
     <string name="title_activity_compose">Compose Tweet</string>
     <string name="what_s_happening">What\'s happening ?</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
